--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,37 @@
-h1,h2,p {
+    h1,h2{
     text-align: center;
+    font-family: Impact, serif;
+    font-style: italic;
     }
-    
+    h1{
+        font-size: 40px;
+    }
+    h2{
+        font-size: 30px;
+    }
     body{
-     background-image:url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg)
+    font-family: sans-serif;
+    background-image:url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg)
     }
-    menu{
+    .menu{
     width: 80%;
     background-color: burlywood;
     margin-left: auto;
     margin-right: auto;
+    padding: 20px;
+    max-width: 500px;
     }
+    .flavor, .dessert{
+        text-align: left;
+        width: 75%;
+    }  
+    .price{
+        text-align: right;
+        width: 25%;
+    }
+    .item p{
+        display: inline-block;
+    }
+.established{
+font-style: italic;
+}
